--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
   <div id="app"></div>
   <script type="module" src="/main.js"></script>
+  
+  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-auth.js"></script>
+  <script src="js/firebase.js"></script>
 </body>
 
 </html>
